<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="accept">Accept</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="activity_faq">FAQ</string>
    <string name="activity_login">Login</string>
    <string name="album_path">@string/app_name</string>
    <string name="app_name">Free Views</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="buy_coins_confirm_content">Get %1$s coins\nCost %2$s dollars</string>
    <string name="buy_coins_confirm_title">Get Coins</string>
    <string name="buy_followers_confirm_content">Get %1$s followers\nCost %2$s coins</string>
    <string name="buy_followers_confirm_title">Get Followers</string>
    <string name="buy_likes_confirm_content">Get %1$s likes\nCost %2$s coins</string>
    <string name="buy_likes_confirm_title">Get Likes</string>
    <string name="buy_views_confirm_content">Get %1$s views\nCost %2$s coins</string>
    <string name="buy_views_confirm_title">Get Views</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="coin_history">Order Status</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="deal_processing_content">The deal is processing, just wait a moment!</string>
    <string name="deal_processing_title">Processing</string>
    <string name="decline">Decline</string>
    <string name="default_coins">0</string>
    <string name="download">Download</string>
    <string name="download_image_exist">Image Already Downloaded!</string>
    <string name="download_image_failed">Download Failed!</string>
    <string name="download_image_succeed">Download Successfully!</string>
    <string name="download_video_exist">Video Already Downloaded!</string>
    <string name="download_video_succeed">Start Download!</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="follow_limit_this_hour_toast">action too fast, please try again 1 hour later or try do likes</string>
    <string name="follow_limit_this_minute_toast">action too fast, please try again 1 minute later or try do likes</string>
    <string name="follow_limit_today_toast">action too fast, please try again tomorrow or try do likes</string>
    <string name="fragment_downloads">Downloads</string>
    <string name="fragment_feed">Feed</string>
    <string name="fragment_getcoins">Get Coins</string>
    <string name="fragment_getfollowers">Get Followers</string>
    <string name="fragment_getlikes">Get Likes</string>
    <string name="fragment_getviews">Get Views</string>
    <string name="fragment_like">Like</string>
    <string name="fragment_popular">Popular</string>
    <string name="fragment_search">Search</string>
    <string name="fragment_settings">Settings</string>
    <string name="fragment_store">Store</string>
    <string name="get_coins">GET COINS</string>
    <string name="get_followers">GET FOLLOWERS</string>
    <string name="get_followers_succeed">Get followers succeed!</string>
    <string name="get_free_coins_hint">Choose one to get free coins!</string>
    <string name="get_item_again">Purchase failed, Please choose an item again!</string>
    <string name="get_likes">GET LIKES</string>
    <string name="get_likes_hint">Pick a post you want to get likes on</string>
    <string name="get_likes_succeed">Get likes succeed!</string>
    <string name="get_views_hint">Pick a video you want to get views on</string>
    <string name="get_views_succeed">Get views succeed!</string>
    <string name="iab_prepare_not_completed">Google billing is initializing, wait a second and choose a product again.</string>
    <string name="like_limit_this_hour_toast">action too fast, please try again 1 hour later or try do follows</string>
    <string name="like_limit_this_minute_toast">action too fast, please try again 1 minute later or try do follows</string>
    <string name="like_limit_today_toast">action too fast, please try again tomorrow or try do follows</string>
    <string name="load_failed">Loading failed, try refresh again</string>
    <string name="loading">Loading...</string>
    <string name="login">log in</string>
    <string name="login_failed">Login Failed, Please input log in again!</string>
    <string name="negative">Cancel</string>
    <string name="order_status">Coin History</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email\n        completions.</string>
    <string name="positive">Confirm</string>
    <string name="positive_get_coins_1">Like +1</string>
    <string name="positive_get_coins_4">Like +4</string>
    <string name="positive_get_coins_follow_1">Follow +4</string>
    <string name="positive_get_coins_follow_4">Follow +16</string>
    <string name="promotion">PROMOTION</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_us_notification_content">add %1$s coins for daily login</string>
    <string name="rate_us_notification_title">Rate Us Rewards</string>
    <string name="rate_us_textview">Rate us +%1$s</string>
    <string name="rate_us_textview_default">Rate us +20</string>
    <string name="rateus_negative">Email Us</string>
    <string name="rateus_positive">Rate Us 5 Stars</string>
    <string name="search_hint">Search</string>
    <string name="settings">SETTINGS</string>
    <string name="settings_contact_us">Contact Us</string>
    <string name="settings_faq">FAQ</string>
    <string name="settings_logout">Log out</string>
    <string name="settings_rate_us_5_stars">Rate us 5 stars</string>
    <string name="settings_rate_us_5_stars_content">Rate us 5 stars:\n* get rid of this dialog forever.\n* unlock download-all function.</string>
    <string name="settings_share_app">Share App</string>
    <string name="skip">Skip</string>
    <string name="store">STORE</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="title_support">Support</string>
    <string name="tittle_account">Account</string>
    <string name="tracker">TRACKER</string>
</resources>
