<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/app_white" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textColor="@color/app_black" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:background="@color/app_light_gray_54" android:paddingTop="5dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/title_support" />
    <TextView android:textStyle="bold" android:textColor="@color/app_black" android:id="@+id/email_us_button" android:background="@drawable/settings_bg" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/settings_contact_us" />
    <View android:background="@color/app_light_gray_54" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
    <TextView android:textStyle="bold" android:textColor="@color/app_black" android:id="@+id/share_app_button" android:background="@drawable/settings_bg" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/settings_share_app" />
    <View android:background="@color/app_light_gray_54" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
    <TextView android:textStyle="bold" android:textColor="@color/app_black" android:id="@+id/faq_button" android:background="@drawable/settings_bg" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/settings_faq" />
    <View android:background="@color/app_light_gray_54" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
    <TextView android:textStyle="bold" android:textColor="@color/app_black" android:id="@+id/rate_us_button" android:background="@drawable/settings_bg" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/settings_rate_us_5_stars" />
    <TextView android:textColor="@color/app_black" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:background="@color/app_light_gray_54" android:paddingTop="5dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tittle_account" />
    <TextView android:textStyle="bold" android:textColor="@color/app_black" android:id="@+id/coin_history_button" android:background="@drawable/settings_bg" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/order_status" />
    <View android:background="@color/app_light_gray_54" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
    <TextView android:textStyle="bold" android:textColor="@color/app_black" android:id="@+id/order_status_button" android:background="@drawable/settings_bg" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/coin_history" />
    <View android:background="@color/app_light_gray_54" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
    <TextView android:textStyle="bold" android:textColor="@color/app_black" android:id="@+id/logout_button" android:background="@drawable/settings_bg" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/settings_logout" />
    <View android:background="@color/app_light_gray_54" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
</LinearLayout>
